# gEngine

./: .gitignore  CMakeLists.txt
FileReader/: fileReader.cpp
FileReader/hpp/: fileReader.h
Game/: Lumber.cpp  Lumber.h
Game/Character_Types/cpp/: builder.cpp  fighter.cpp  healer.cpp  king.cpp  worker.cpp
Game/Character_Types/hpp/: #builder.h#  builder.h  fighter.h  healer.h  king.h  worker.h
Game/cpp/: entity.cpp  game.cpp  main.cpp  player.cpp  scene.cpp
Game/hpp/: GUI.h  entity.h  game.h  player.h  scene.h  sprite.h
System/cpp/: GUI.cpp  camera.cpp  engine.cpp  renderer.cpp  textureAtlas.cpp  toolBox.cpp
System/hpp/: GUI.h  camera.h  common.h  engine.h  renderer.h  textureAtlas.h  toolBox.h
assets/: scene_data.txt  scene_data_new.txt
cmake/: FindSDL2.cmake  FindSDL2TTF.cmake
cpp/: camera.cpp  engine.cpp  fileReader.cpp  game.cpp  main.cpp  player.cpp  renderer.cpp  sprite.cpp  texture.cpp  textureAtlas.cpp  toolBox.cpp  vd2d.cpp
hpp/: GUI.h  camera.h  entity.h  fileReader.h  game.h  renderer.h  scene.h  texture.h  toolBox.h  vd2d.h
src/: main.cpp
src/System/Engine/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Renderer.cpp  Renderer.h
src/System/Game/: Game.cpp  Game.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h
src/System/Game/GUI/: GUI.cpp  GUI.h
src/System/Game/Objects/Character_Types/: Entity.cpp  Entity.h  Fighter.cpp  Fighter.h  Healer.cpp  Healer.h  King.cpp  King.h  Player.cpp  Player.h  Worker.cpp  Worker.h
src/System/Game/Objects/Structure_Types/: Building.cpp  Building.h  Rock.cpp  Rock.h  Tree.cpp  Tree.h
src/System/Tools/: ToolBox.cpp  ToolBox.h  common.h  vd2d.cpp
src/System/Tools/FileReader/: fileReader.cpp  fileReader.h
